--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 android:label="@string/title_activity_shopping_details"
                 android:parentActivityName=".MainActivity"
                 android:theme="@style/AppTheme.NoActionBar"
-                android:windowSoftInputMode="adjustPan">
+                android:windowSoftInputMode="adjustResize">
 
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
