--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,9 @@ dependencies {
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.2"
 }
 repositories {
     mavenCentral()
